specificity calculator and links

--- a/indext.html
+++ b/indext.html
@@ -13,7 +13,12 @@
     <main class="container">
         <h2 class="container">Article 1</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    <!--     <form>
+        <p> this is specificity calculator</p>
+        <a>https://specificity.keegan.st/</a>
+        <p> this is rick rolled</p>
+        <a href="https://youtu.be/dQw4w9WgXcQ?si=Z7iCYmnjj6jKW9nX"> never gonna give you up</a>
+
+          <!--     <form>
             <label for="name">Name:</label>
             <input id="name" type="text" placeholder="Your Name">
             <button>Submit</button>
