--- a/indext.html
+++ b/indext.html
@@ -17,7 +17,20 @@
         <a>https://specificity.keegan.st/</a>
         <p> this is rick rolled</p>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=Z7iCYmnjj6jKW9nX"> never gonna give you up</a>
-
+        <h2> Oredered List</h2>
+        <ol start="3" reversed>
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
+          <li>item 4</li>
+        </ol>
+        <h2> Unoredered List</h2>
+        <ul>
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
+        </ul>
+        
           <!--     <form>
             <label for="name">Name:</label>
             <input id="name" type="text" placeholder="Your Name">
