--- a/indext.html
+++ b/indext.html
@@ -20,6 +20,7 @@
         <h2> Oredered List of Beginner Projects</h2>
         <ol start="3" reversed>
           <li><a href="./itemslist.html">items List with nice css</a></li>
+          <li><a href="./displaytypes.html">lets play with display</a></li>
           <li>item 2</li>
           <li>item 3</li>
           <li>item 4</li>
