--- a/indext.html
+++ b/indext.html
@@ -17,9 +17,9 @@
         <a>https://specificity.keegan.st/</a>
         <p> this is rick rolled</p>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=Z7iCYmnjj6jKW9nX"> never gonna give you up</a>
-        <h2> Oredered List</h2>
+        <h2> Oredered List of Beginner Projects</h2>
         <ol start="3" reversed>
-          <li>item 1</li>
+          <li><a href="./itemslist.html">items List with nice css</a></li>
           <li>item 2</li>
           <li>item 3</li>
           <li>item 4</li>
