you'll float too

--- a/indext.html
+++ b/indext.html
@@ -21,7 +21,7 @@
         <ol start="3" reversed>
           <li><a href="./itemslist.html">items List with nice css</a></li>
           <li><a href="./displaytypes.html">lets play with display</a></li>
-          <li>item 2</li>
+          <li><a href="./floats.html">lets play with floats</a></li>
           <li>item 3</li>
           <li>item 4</li>
         </ol>
