learning positions of elements
get in position and wait for my go

--- a/indext.html
+++ b/indext.html
@@ -22,7 +22,7 @@
           <li><a href="./itemslist.html">items List with nice css</a></li>
           <li><a href="./displaytypes.html">lets play with display</a></li>
           <li><a href="./floats.html">lets play with floats</a></li>
-          <li>item 3</li>
+          <li><a href="./positions.html">lets play with positions</a></li>
           <li>item 4</li>
         </ol>
         <h2> Unoredered List</h2>
