flex that shit up

--- a/indext.html
+++ b/indext.html
@@ -23,7 +23,7 @@
           <li><a href="./displaytypes.html">lets play with display</a></li>
           <li><a href="./floats.html">lets play with floats</a></li>
           <li><a href="./positions.html">lets play with positions</a></li>
-          <li>item 4</li>
+          <li><a href="./flexbox.html">and now for the moment you all been waiting for the flexyboxy</a></li>
         </ol>
         <h2> Unoredered List</h2>
         <ul>
