--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="./floats.html">lets play with floats</a></li>
           <li><a href="./positions.html">lets play with positions</a></li>
           <li><a href="./flexbox.html">and now for the moment you all been waiting for the flexyboxy</a> <p> please visit <a href ="https://flexboxfroggy.com/#fr"> flex box froggy</a> for more flex box fun</p></li>
-          <li><a href="./grid.html">grids</a></li>
+          <li><a href="./grid.html">grids</a> <p> try visiting <a href="https://cssgridgarden.com/#fr">grid garden</a></p></li>
         </ol>
         <h2> Unoredered List</h2>
         <ul>
