--- a/indext.html
+++ b/indext.html
@@ -18,12 +18,12 @@
         <p> this is rick rolled</p>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=Z7iCYmnjj6jKW9nX"> never gonna give you up</a>
         <h2> Oredered List of Beginner Projects</h2>
-        <ol start="3" reversed>
+        <ol>
           <li><a href="./itemslist.html">items List with nice css</a></li>
           <li><a href="./displaytypes.html">lets play with display</a></li>
           <li><a href="./floats.html">lets play with floats</a></li>
           <li><a href="./positions.html">lets play with positions</a></li>
-          <li><a href="./flexbox.html">and now for the moment you all been waiting for the flexyboxy</a></li>
+          <li><a href="./flexbox.html">and now for the moment you all been waiting for the flexyboxy</a> <p> please visit <a href ="https://flexboxfroggy.com/#fr"> flex box froggy</a> for more flex box fun</p></li>
         </ol>
         <h2> Unoredered List</h2>
         <ul>
