--- a/indext.html
+++ b/indext.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <p>this is a paragraph</p>
-    <p id="second">this is a purple paragraph</p>
+    <p>this is a first paragraph</p>
+    <p id="second">this is second  paragraph</p>
+    <p id="second">this is third  paragraph</p>
   </body>
 </html>
